pom: update for java 8